--- a/index.html
+++ b/index.html
@@ -22,6 +22,92 @@
 
 	<body>
 
+    <header>
+
+      <img src="img/si-senor-logo.png" alt="Si Senor" title="Si Senor">
+
+      <nav>
+
+            <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Catering</a></li>
+                    <li><a href="#">Contact</a></li>
+
+            <ul>
+
+      </nav>
+
+    </header>
+
+    <main>
+
+          <section class="hero-image">
+
+                <h1>Serving the Finest Authentic Mexican Food</h1>
+
+                <a class="green-btn">View Menu</a>
+
+          </section>
+
+          <section class="about">
+
+                <p>Whether you want to try out our traditional tacos, delicious Mexican sandwiches, quality steak, or anything else from our list of exquisite delicacies, you can count on our restaurant to outperform even the finest establishments in Jacksonville FL. We provide high quality, fresh and 100% authentic Mexican food, and we're definitely not afraid to showcase the delicious, outstanding foods we are capable of providing.</p>
+
+                <div id="hours">
+
+                    <h2>Hours</h2>
+
+                    <p>Open 11am-11pm every day</p>
+                    <p>Closed on select holidays // call for details</p>
+
+                </div>
+
+          </section>
+
+          <section class="decisions">
+
+                <div id="food">
+                      <h3>Food</h3>
+                </div>
+
+                <div id="dessert">
+                      <h3>Dessert</h3>
+                </div>
+
+                <div id="drink">
+                      <h3>Drinks</h3>
+                </div>
+
+          </section>
+
+          <section class="pull-quote">
+
+              <p>“The flavors are dynamite! The service is quite genuine as well. Very friendly and relaxed. Very family oriented. We loved it! It is on my family’s list of favorites.”</p>
+
+              <a class="wht-btn">More Reviews</a>
+
+          </section>
+
+    </main>
+
+    <footer>
+
+          <div>
+                <p>3546 St Johns Bluff Rd <br>
+                  Jacksonville, FL 32246</p>
+                  <p>&copy; 2015 Si Senor Fresh Mex</p>
+          </div>
+
+          <div id="social">
+                <img src="img/facebook.jpg" alt="Facebook" title="Facebook">
+                <img src="img/insta.jpg" alt="Instagram" title="Instagram">
+                <img src="img/twitter.jpg" alt="Twitter" title="Twitter">
+          </div>
+
+
+    </footer>
+
 
 	</body>
 
