--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="">
 
-		<link type="text/css" rel="stylesheet" href="css/main.css" />
+		<link type="text/css" rel="stylesheet" href="css/main.css" >
 
 
 		<!--[if lt IE 9]>
