style the images, testimony, and footer sections

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
 
           <section class="decisions">
 
-                <div id="food">
+                <div class="food callOutBlock">
                       <h3>Food</h3>
                 </div>
 
-                <div id="dessert">
+                <div class="dessert callOutBlock">
                       <h3>Dessert</h3>
                 </div>
 
-                <div id="drink">
+                <div class="drink callOutBlock">
                       <h3>Drinks</h3>
                 </div>
 
@@ -99,7 +99,7 @@
                   <p>&copy; 2015 Si Senor Fresh Mex</p>
           </div>
 
-          <div id="social">
+          <div class="social">
                 <img src="img/facebook.jpg" alt="Facebook" title="Facebook">
                 <img src="img/insta.jpg" alt="Instagram" title="Instagram">
                 <img src="img/twitter.jpg" alt="Twitter" title="Twitter">
