adjust paragraph widths for larger devices

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <p>Whether you want to try out our traditional tacos, delicious Mexican sandwiches, quality steak, or anything else from our list of exquisite delicacies, you can count on our restaurant to outperform even the finest establishments in Jacksonville FL. We provide high quality, fresh and 100% authentic Mexican food, and we're definitely not afraid to showcase the delicious, outstanding foods we are capable of providing.</p>
 
-                <div class="hours">
+                <div id="hours">
 
                     <h2>Hours</h2>
 
