adjust headline positioning on desktop / tablet

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
 
           <section class="hero-image">
 
-                <h1>Serving the Finest Authentic Mexican Food</h1>
+                <div class="headline-container">
 
-                <a class="green-btn">View Menu</a>
+                    <h1>Serving the Finest Authentic Mexican Food</h1>
+
+                    <a class="green-btn">View Menu</a>
+
+                </div>
 
           </section>
 
@@ -96,7 +100,7 @@
           <div>
                 <p>3546 St Johns Bluff Rd <br>
                   Jacksonville, FL 32246</p>
-                  <p>&copy; 2015 Si Senor Fresh Mex</p>
+                  <p>&copy; 2018 Si Senor Fresh Mex</p>
           </div>
 
           <div class="social">
