--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="description" content="">
 
 		<link type="text/css" rel="stylesheet" href="css/main.css" >
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
 		<!--[if lt IE 9]>
@@ -37,6 +38,24 @@
             <ul>
 
       </nav>
+
+      <!-- mobile nav goes here -->
+
+      <button class="hamburger">&#9776;</button>
+
+			<button class="cross">&#735;</button>
+
+		  <div class="menu">
+
+    				<ul>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Menu</a></li>
+                  <li><a href="#">Catering</a></li>
+                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Call</a></li>
+
+    				</ul>
+			</div>
 
     </header>
 
@@ -111,6 +130,8 @@
 
 
     </footer>
+
+    <script src="js/hamburger.js"></script>
 
 
 	</body>
