make the footer p 2 column on tablet/desktop

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <footer>
 
-          <div>
+          <div class="footer-contact">
                 <p>3546 St Johns Bluff Rd <br>
                   Jacksonville, FL 32246</p>
                   <p>&copy; 2018 Si Senor Fresh Mex</p>
