validate and clean code, fix image stack on tablet

--- a/index.html
+++ b/index.html
@@ -1,139 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
-	<head>
-
-		<meta charset="utf-8">
-
-		<title>Si Senor Fresh Mex</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta name="description" content="">
-
-		<link type="text/css" rel="stylesheet" href="css/main.css" >
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-
-		<!--[if lt IE 9]>
-			<script src="js/html5shiv-printshiv.min.js"></script>
-		<![endif]-->
-
-	</head>
-
-	<body>
-
-    <header>
-
-      <img src="img/si-senor-logo.png" alt="Si Senor" title="Si Senor">
-
-      <nav>
-
-            <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Catering</a></li>
-                    <li><a href="#">Contact</a></li>
-
-            <ul>
-
-      </nav>
-
-      <!-- mobile nav goes here -->
-
-      <button class="hamburger">&#9776;</button>
-
-			<button class="cross">&#735;</button>
-
-		  <div class="menu">
-
-    				<ul>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Menu</a></li>
-                  <li><a href="#">Catering</a></li>
-                  <li><a href="#">Contact</a></li>
-                  <li><a href="#">Call</a></li>
-
-    				</ul>
+<head>
+	<meta charset="utf-8">
+	<title>Si Se&ntilde;or Fresh Mex</title>
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<meta content="A family-friendly Fresh Mex option in Jacksonville, Florida" name="description">
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+	</script><!--[if lt IE 9]>
+            <script src="js/html5shiv-printshiv.min.js"></script>
+        <![endif]-->
+</head>
+<body>
+	<header>
+		<img alt="Si Senor" src="img/si-senor-logo.png" title="Si Senor">
+		<nav>
+			<ul>
+				<li>
+					<a href="#">About</a>
+				</li>
+				<li>
+					<a href="#">Menu</a>
+				</li>
+				<li>
+					<a href="#">Catering</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav><!-- mobile nav goes here -->
+		<button class="hamburger">&#9776;</button> <button class="cross">&#735;</button>
+		<div class="menu">
+			<ul>
+				<li>
+					<a href="#">About</a>
+				</li>
+				<li>
+					<a href="#">Menu</a>
+				</li>
+				<li>
+					<a href="#">Catering</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+				<li>
+					<a href="#">Call</a>
+				</li>
+			</ul>
+		</div>
+	</header>
+	<main>
+		<section class="hero-image">
+			<div class="headline-container">
+				<h1>Serving the Finest Authentic Mexican Food</h1><a class="green-btn">View Menu</a>
 			</div>
-
-    </header>
-
-    <main>
-
-          <section class="hero-image">
-
-                <div class="headline-container">
-
-                    <h1>Serving the Finest Authentic Mexican Food</h1>
-
-                    <a class="green-btn">View Menu</a>
-
-                </div>
-
-          </section>
-
-          <section class="about">
-
-                <p>Whether you want to try out our traditional tacos, delicious Mexican sandwiches, quality steak, or anything else from our list of exquisite delicacies, you can count on our restaurant to outperform even the finest establishments in Jacksonville FL. We provide high quality, fresh and 100% authentic Mexican food, and we're definitely not afraid to showcase the delicious, outstanding foods we are capable of providing.</p>
-
-                <div id="hours">
-
-                    <h2>Hours</h2>
-
-                    <p>Open 11am-11pm every day</p>
-                    <p>Closed on select holidays // call for details</p>
-
-                </div>
-
-          </section>
-
-          <section class="decisions">
-
-                <div class="food callOutBlock">
-                      <h3>Food</h3>
-                </div>
-
-                <div class="dessert callOutBlock">
-                      <h3>Dessert</h3>
-                </div>
-
-                <div class="drink callOutBlock">
-                      <h3>Drinks</h3>
-                </div>
-
-          </section>
-
-          <section class="pull-quote">
-
-              <p>“The flavors are dynamite! The service is quite genuine as well. Very friendly and relaxed. Very family oriented. We loved it! It is on my family’s list of favorites.”</p>
-
-              <a class="wht-btn">More Reviews</a>
-
-          </section>
-
-    </main>
-
-    <footer>
-
-          <div class="footer-contact">
-                <p>3546 St Johns Bluff Rd <br>
-                  Jacksonville, FL 32246</p>
-                  <p>&copy; 2018 Si Senor Fresh Mex</p>
-          </div>
-
-          <div class="social">
-                <img src="img/facebook.jpg" alt="Facebook" title="Facebook">
-                <img src="img/insta.jpg" alt="Instagram" title="Instagram">
-                <img src="img/twitter.jpg" alt="Twitter" title="Twitter">
-          </div>
-
-
-    </footer>
-
-    <script src="js/hamburger.js"></script>
-
-
-	</body>
-
+		</section>
+		<section class="about">
+			<p>Whether you want to try out our traditional tacos, delicious Mexican sandwiches, quality steak, or anything else from our list of exquisite delicacies, you can count on our restaurant to outperform even the finest establishments in Jacksonville, FL. We provide high quality, fresh and 100% authentic Mexican food, and we're definitely not afraid to showcase the delicious, outstanding foods we are capable of providing.</p>
+			<div id="hours">
+				<h2>Hours</h2>
+				<p>Open 11am-11pm every day</p>
+				<p>Closed on select holidays // call for details</p>
+			</div>
+		</section>
+		<section class="decisions">
+			<div class="food callOutBlock">
+				<h3>Food</h3>
+			</div>
+			<div class="dessert callOutBlock">
+				<h3>Dessert</h3>
+			</div>
+			<div class="drink callOutBlock">
+				<h3>Drinks</h3>
+			</div>
+		</section>
+		<section class="pull-quote">
+			<p>“The flavors are dynamite! The service is quite genuine as well. Very friendly and relaxed. Very family oriented. We loved it! It is on my family’s list of favorites.”</p><a class="wht-btn">More Reviews</a>
+		</section>
+	</main>
+	<footer>
+		<div class="footer-contact">
+			<p>3546 St. Johns Bluff Rd<br>
+			Jacksonville, FL 32246</p>
+			<p>&copy; 2018 Si Se&ntilde;or Fresh Mex</p>
+		</div>
+		<div class="social"><img alt="Facebook" src="img/facebook.jpg" title="Facebook"> <img alt="Instagram" src="img/insta.jpg" title="Instagram"> <img alt="Twitter" src="img/twitter.jpg" title="Twitter"></div>
+	</footer>
+	<script src="js/hamburger.js">
+	</script>
+</body>
 </html>
